hphp/hack/test/typecheck/new_inference/odersky1.php.like_types.exp
File "odersky1.php", line 9, characters 10-20:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
